--- a/style.css
+++ b/style.css
@@ -236,6 +236,7 @@ body {
   flex-direction: row;
   align-items: center;
   height: 100%;
+  border-bottom: 1px solid white;
 }
 #chat .chat__conversation-panel__container .panel-item:not(:last-child) {
   margin: 0 1em 0 0;
